# Advent_of_Code

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
AdventOfCode2022/: Podfile  README.md
AdventOfCode2022/AdventOfCode2022/: lib.swift  main.swift
AdventOfCode2022/AdventOfCode2022.xcodeproj/: project.pbxproj
AdventOfCode2022/AdventOfCode2022.xcworkspace/: contents.xcworkspacedata
AdventOfCode2022/AdventOfCode2022/day1/: day1.swift
AdventOfCode2022/AdventOfCode2022/day2/: day2.swift  day2Lib.swift
AdventOfCode2022/AdventOfCode2022/day3/: day3.swift
AventOfCode2022/: Package.swift  Podfile  README.md
AventOfCode2022/AventOfCode2022/: lib.swift  main.swift
AventOfCode2022/AventOfCode2022.xcodeproj/: project.pbxproj
AventOfCode2022/AventOfCode2022.xcworkspace/: contents.xcworkspacedata
AventOfCode2022/AventOfCode2022Tests/: AventOfCode2022Tests.swift
advent_of_code_2021/: Cargo.toml  README.md
advent_of_code_2021/.cargo/: config.toml
advent_of_code_2021/src/: lib.rs  main.rs
advent_of_code_2023/: Cargo.toml
advent_of_code_2023/src/: lib.rs  main.rs
advent_of_code_2023/src/day1/: mod.rs
advent_of_code_2023/src/day2/: mod.rs
advent_of_code_2023/src/day3/: mod.rs
avent_of_code_2021/: README.md
avent_of_code_2021/src/: lib.rs
day1/src/: lib.rs  main.rs
src/: day1.rs  day2.rs  day3.rs  lib.rs  main.rs  utils.rs
src/day1/: mod.rs
src/day10/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
src/day9/: mod.rs
(+41 files in other folders)
