[package]
name = "advent2023"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
humantime = "2.1.0"
owo-colors = "3.2.0"
aho-corasick = "1.1.2"
clap = { version = "4.5.40", features = ["derive"] }
regex = "1.11.1"
lazy_static = "1.5.0"
pastey = "0.1.0"
